# crosnetik-be

./: .flake8  .gitignore  LICENSE  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  users.py
app/core/: config.py  dependencies.py  jwt.py
app/db/: database.py  init_db.py
app/models/: user_model.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: auth_service.py
